--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,18 +2,80 @@
 <html>
 <head>
     <meta charset="utf-8" content="HTML, CSS, JavaScript">
-    <title>Market IT</title>
-    <link rel="stylesheet" href="../public/css/site.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <link rel="shortcut icon" type="image/jpg" href="/public/imgs/logo.jpg">
+    <link rel="stylesheet" href="/public/css/site.css">
+
+    <link rel="stylesheet" type="text/css" href="/public/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="/public/css/animate.css">
+	<link rel="stylesheet" type="text/css" href="/public/css/font-awesome.min.css">
+    {{!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> --}}
+
+	<script src="/public/js/jquery-2.1.0.js"></script>
+	<script src="/public/js/bootstrap.js"></script>
+	<script src="/public/js/blocs.js"></script>
+	<script src="/public/js/lazysizes.min.js" defer></script>
+    <title>Home</title>
 </head>
+<header>
+    <!-- Main container -->
+<div class="page-container">
+    <!-- bloc-0 -->
+<div class="bloc l-bloc bgc-white " id="bloc-0">
+	<div class="container bloc-sm">
+		<nav class="navbar row">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="index.html">Market IT<span class="special-tag-for-editing-text-with-html"></span><span class="special-tag-for-editing-text-with-html"></span><img src="/public/imgs/logo.jpg" alt="logo" /></a>
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+				</button>
+			</div>
+			<div class="collapse navbar-collapse navbar-1">
+				<ul class="site-navigation nav navbar-nav">
+					<li>
+						<a href="http://localhost:3000/products" id="pl-undefined">Products</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</div>
+</div>
+<!-- bloc-0 END -->
+</header>
 <body>
     <main>
     {{{body}}}
         <script type="text/javascript" src="../public/js/client_side.js"></script>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     </main>
+
+    <!-- Footer - bloc-4 -->
+<div class="bloc bgc-white l-bloc bloc-bg-texture texture-paper" id="bloc-4">
+	<div class="container bloc-lg">
+		<div class="row">
+			<div class="col-sm-4">
+				<h3 class="mg-md bloc-mob-center-text">
+					AboutUs
+				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Contact us</a>
+			</div>
+			<div class="col-sm-4">
+				<h3 class="mg-md bloc-mob-center-text">
+					Follow Us
+				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a>
+			</div>
+			<div class="col-sm-4">
+				<h3 class="mg-md bloc-mob-center-text">
+					Company
+				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Privacy</a>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- Footer - bloc-4 END -->
 </body>
 </html>
