--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,8 @@
     <meta charset="utf-8" content="HTML, CSS, JavaScript">
         <meta name="keywords" content="">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/jpg" href="/public/imgs/logo.jpg">
+    {{!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> --}}
+    {{!-- <link rel="shortcut icon" type="image/jpg" href="/public/imgs/logo.jpg"> --}}
     <link rel="stylesheet" href="/public/css/site.css">
 
     <link rel="stylesheet" type="text/css" href="/public/css/bootstrap.css">
@@ -30,11 +30,46 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html">Market IT<span class="special-tag-for-editing-text-with-html"></span><span class="special-tag-for-editing-text-with-html"></span><img src="/public/imgs/logo.jpg" alt="logo" /></a>
+				<a class="navbar-brand" href="http://localhost:3000/">Market IT<span class="special-tag-for-editing-text-with-html"></span><span class="special-tag-for-editing-text-with-html"></span><img src="/public/imgs/logo.jpg" alt="logo" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
+
+            <!-- Search bar -->
+             <form name ="topform" id="top-form" class="top-form">
+            <img src="../public/imgs/logo.jpg"  alt="MarketIT" id="top-log" class="top-log"/>
+            <input type="text"  placeholder="Search" id="search-input" class ="search-input">
+            <button class="search-button" id="search-button" type="submit">Search</button>
+        </form>
+        <!-- Search bar END -->
+
+
+        <!-- User Profie -->
+        <div  class="form-inline">
+        <ul>
+            <li class="nav-item dropdown">
+                    <img src="../public/imgs/user_en.jpg"  alt="UserDropDown" id="drop-graph" class="drop-graph" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"/>
+                    <img src="../public/imgs/triangle.jpg"  alt="UserDropDown" id="drop-triangle" class="drop-triangle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"/>
+
+                    <div class="dropdown-menu" aria-labelledby="dropdown03">
+                        
+                        <a class="dropdown-item" href="">Your Bio</a>
+                        <a class="dropdown-item" href="">Your Orders</a>
+                        <a class="dropdown-item" href="">Your Posts</a>
+                        <a class="dropdown-divider"></a>
+                        <form class="logout-form" action="/logout" accept-charset="UTF-8" method="post">
+                            <input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="nsMWSKZLME7eUQxVeWSe7WZUPjWsY43w3sfbbOTCZDtXmOyCr7SVH3MqoJ5VFXtLFPBORuzA/erdiknH0xz4rQ==">
+                            <button type="submit" class="dropdown-item dropdown-signout" data-ga-click="Header, sign out, icon:logout" role="menuitem">Sign out</button>
+                        </form> 
+                    </div>
+                </li>
+            </ul>
+            </div>
+
+        <!-- User Profie END-->
+
+
 			<div class="collapse navbar-collapse navbar-1">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
