--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,7 +21,13 @@
 					<br>
 				</h3>
 				<div class="text-center">
-					<a href="index.html" class="btn-wire btn btn-xl animated fadeIn animDelay1">Login / Signup<br></a>
+					<a href="login" class="btn-wire btn btn-xl animated fadeIn animDelay1">Login<br></a>
+				</div>
+				<p>
+					
+				</p>
+				<div class="text-center">
+					<a href="signup" class="btn-wire btn btn-xl animated fadeIn animDelay1">Sign Up<br></a>
 				</div>
 			</div>
 		</div>
