--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,42 +5,64 @@
 
         <h1>Sign Up For Market IT</h1>
 
-
-        <form name ="signup" action="/signup" method="POST" id="signup-form" class="signup-form">
+        <form>
+        <form class="form-horizontal" role="form" name ="signup" action="/signup" method="POST" id="signup-form" class="signup-form">
+            
+            <div class="form-group">
             <label for="text_input">User Name:</label>
             <input type="text"  name="username" placeholder="" id="signup-name" class="signup-name"/>
-
+            </div>
+            
+            <div class="form-group">
             <label for="text_input">First Name:</label>
             <input type="text"  name="signup-first" placeholder="" id="signup-first" class="signup-first"/>
+            </div>
 
+            <div class="form-group">
             <label for="text_input">Last Name:</label>
             <input type="text"  name="signup-last" placeholder="" id="signup-last" class="signup-last"/>
-
+            </div>
+            
+            <div class="form-group">
             <label for="text_input">Email Address:</label>
             <input type="text"  name="signup-email" placeholder="" id="signup-email" class="signup-email"/>
 
+            <div class="form-group">
             <label for="text_input">Telephone:</label>
             <input type="text"  name="signup-phone" placeholder="" id="signup-phone" class="signup-phone"/>
+            </div>
 
+            <div class="form-group">
             <label for="text_input">City:</label>
             <input type="text"  name="signup-city" placeholder="" id="signup-city" class="signup-city"/>
+            </div>
 
+            <div class="form-group">
             <label for="text_input">Address Line 1:</label>
             <input type="text"  name="signup-address1" placeholder="" id="signup-address1" class="signup-address1"/>
+            </div>
 
+            <div class="form-group">
             <label for="text_input">Address Line 2:</label>
             <input type="text"  name="signup-address2" placeholder="" id="signup-address2" class="signup-address2"/>
+            </div>
 
+            <div class="form-group">
             <label for="text_input">Password:</label>
             <input type="text"  name="signup-password" placeholder="" id="signup-password" class="signup-password"/>
-            
+            </div>
+
+            <div class="form-group">
             <label for="text_input">Repeat Password:</label>
             <input type="text"  name="signup-repassword" placeholder="" id="signup-repassword" class="signup-repassword"/>
-            
+            </div>
+
+            <div class="form-group">
             <button class="button" id ="signup-button" type="submit">Sign Up</button>
+            </div>
         </form>
-    
-    
+        </form>
+        
         </article>
         <div class="error" id="error">{{error}}</div>
     </main>
