--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,8 @@
     {{!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> --}}
     {{!-- <link rel="shortcut icon" type="image/jpg" href="/public/imgs/logo.jpg"> --}}
     <link rel="stylesheet" href="/public/css/site.css">
-
+    <link rel="stylesheet" href="/public/css/product.css">
+    
     <link rel="stylesheet" type="text/css" href="/public/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="/public/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="/public/css/font-awesome.min.css">
