--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,68 +1,79 @@
-
-    <main>
-        <article class="input-sign-up">
-
-
-        <h1>Sign Up For Market IT</h1>
-
-        <form>
-        <form class="form-horizontal" role="form" name ="signup" action="/signup" method="POST" id="signup-form" class="signup-form">
+<div class="container">
+      <hr>
+      <h2>Sign Up For Market IT</h2>
+      <hr>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8  col-12 jumbotron">
+            <form  name ="signup" action="/signup" method="POST" id="signup-form" class="signup-form">
+              <div class="form-group" >
+                <label for="name">User Name:</label>
+                <input type="text" class="form-control" id="signup-name" name="username" placeholder="Name" aria-describedby="nameHelp">
+                <span id="nameHelp" class="form-text text-muted" style="display: none;">Please enter a valid user name.</span> 
+              </div>
+                
+              <div class="form-group">
+                <label for="firstname">First Name</label>
+                <input type="text" class="form-control" id="signup-first" name="signup-first" placeholder="First Name" aria-describedby="firstHelp">
+                <span id="firstHelp" class="form-text text-muted" style="display: none;">Please enter a valid first name.</span>
+              </div>
+                
+              <div class="form-group">
+                <label for="lastname">Last Name:</label>
+                <input type="text" class="form-control" id="signup-last" name="signup-last" placeholder="Last Name" aria-describedby="lastHelp">
+                <span id="lastHelp" class="form-text text-muted" style="display: none;">Please enter a valid last name.</span>
+              </div>
+              
+              <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" aria-describedby="emailHelp">
+                <span id="emailHelp" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span>
+              </div>
+                
+              <div class="form-group">
+                <label for="telephone">Telephone:</label>
+                <input type="text" class="form-control" id="signup-phone" name="signup-phone" placeholder="Telephone Number" aria-describedby="phoneHelp">
+                <span id="phoneHelp" class="form-text text-muted" style="display: none;">Please enter a valid telephone number.</span>
+              </div>
+              
+              <div class="form-group">
+                <label for="city">City:</label>
+                <input type="text" class="form-control" id="signup-city" name="signup-city" placeholder="City" aria-describedby="cityHelp">
+                <span id="cityHelp" class="form-text text-muted" style="display: none;">Please enter a valid city.</span>
+              </div>
+                
+              <div class="form-group">
+                <label for="addressline1">Address Line 1:</label>
+                <input type="text" class="form-control" id="signup-address1" name="signup-address1" placeholder="Address Line 1" aria-describedby="addressline1Help">
+                <span id="addressline1Help" class="form-text text-muted" style="display: none;">Please enter a valid address line.</span>
+              </div>
+              
+              <div class="form-group">
+                <label for="addressline2">Address Line 2:</label>
+                <input type="text" class="form-control" id="signup-address2" name="signup-address2" placeholder="Address Line 2" aria-describedby="addressline2Help">
+                <span id="addressline2Help" class="form-text text-muted" style="display: none;">Please enter a valid address line.</span>
+              </div>
+                
+              <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="text" class="form-control" id="signup-password" name="signup-password" placeholder="Password" aria-describedby="passwordHelp">
+                <span id="passwordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
+              </div>
+                
+              <div class="form-group">
+                <label for="repassword">Repeat Password:</label>
+                <input type="text" class="form-control" id="signup-repassword" name="signup-repassword" placeholder="Repeat Password" aria-describedby="repasswordHelp">
+                <span id="repasswordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
+              </div>
             
-            <div class="form-group">
-            <label for="text_input">User Name:</label>
-            <input type="text"  name="username" placeholder="" id="signup-name" class="signup-name"/>
-            </div>
-            
-            <div class="form-group">
-            <label for="text_input">First Name:</label>
-            <input type="text"  name="signup-first" placeholder="" id="signup-first" class="signup-first"/>
-            </div>
-
-            <div class="form-group">
-            <label for="text_input">Last Name:</label>
-            <input type="text"  name="signup-last" placeholder="" id="signup-last" class="signup-last"/>
-            </div>
-            
-            <div class="form-group">
-            <label for="text_input">Email Address:</label>
-            <input type="text"  name="signup-email" placeholder="" id="signup-email" class="signup-email"/>
-
-            <div class="form-group">
-            <label for="text_input">Telephone:</label>
-            <input type="text"  name="signup-phone" placeholder="" id="signup-phone" class="signup-phone"/>
-            </div>
-
-            <div class="form-group">
-            <label for="text_input">City:</label>
-            <input type="text"  name="signup-city" placeholder="" id="signup-city" class="signup-city"/>
-            </div>
-
-            <div class="form-group">
-            <label for="text_input">Address Line 1:</label>
-            <input type="text"  name="signup-address1" placeholder="" id="signup-address1" class="signup-address1"/>
-            </div>
-
-            <div class="form-group">
-            <label for="text_input">Address Line 2:</label>
-            <input type="text"  name="signup-address2" placeholder="" id="signup-address2" class="signup-address2"/>
-            </div>
-
-            <div class="form-group">
-            <label for="text_input">Password:</label>
-            <input type="text"  name="signup-password" placeholder="" id="signup-password" class="signup-password"/>
-            </div>
-
-            <div class="form-group">
-            <label for="text_input">Repeat Password:</label>
-            <input type="text"  name="signup-repassword" placeholder="" id="signup-repassword" class="signup-repassword"/>
-            </div>
-
-            <div class="form-group">
-            <button class="button" id ="signup-button" type="submit">Sign Up</button>
-            </div>
-        </form>
-        </form>
-        
-        </article>
-        <div class="error" id="error">{{error}}</div>
-    </main>
+              <div class="text-center">
+                <button type="submit" class="btn btn-primary" id ="signup-button">Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      </div>
+      <hr>
+       
+    </div>
