--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,8 +29,11 @@
     <!-- Main container -->
 <div class="wrap">
     <!-- bloc-0 -->
+    
+  
 <div class="bloc l-bloc bgc-white " id="bloc-0">
 	<div class="container bloc-sm">
+
 		<nav class="navbar_row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="http://localhost:3000/">Market IT<span class="special-tag-for-editing-text-with-html"></span></a>
@@ -40,6 +43,7 @@
 				</button>
 			</div>
 
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- Search bar -->
              <form name ="topform" id="top-form" class="top-form">
             <input type="text"  placeholder="Search" id="search-input" class ="search-input">
@@ -49,7 +53,7 @@
 
 
         <!-- User Profie -->
-        <div  class="form-inline">
+        <!-- <div  class="form-inline"> -->
         <ul>
             <li class="nav-item dropdown">
                     <img src="../public/imgs/user_en.jpg"  alt="UserDropDown" id="drop-graph" class="drop-graph" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"/>
@@ -68,8 +72,8 @@
                     </div>
                 </li>
             </ul>
+            <!-- </div> -->
             </div>
-
         <!-- User Profie END-->
 
 
