--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -107,8 +107,10 @@
                         predecessor.</p>
                     <img class="more-info-img" src="../public/imgs/earphone.png" alt="earphone" />
                 </div>
+                
                 <div class="tab-pane fade" id="review">
-                    <table class="table table-hover">
+                    
+                    <table class="table table-hover" id="comment-table">
                         <caption>Recent comments</caption>
                         <thead>
                             <tr>
@@ -117,21 +119,26 @@
                                 <th>time</th>
                             </tr>
                         </thead>
+
                         <tbody>
-                            <tr>
-                                <td>Tom</td>
-                                <td>Nice earphone!</td>
-                                <td>11:28am Nov. 15 2018</td>
-                            </tr>
+                            
                         </tbody>
                     </table>
+                    <form name ="phrase" id="myForm" class="new-palindrome-form">
+                        <label for="text_input">Commenting:</label>
+                        <div class="form-group">
+                            <textarea type="text" rows="3" cols="70" class="form-control" id="text_input" name="text_input" placeholder="Comment"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary" id ="comment-button">Comment</button>
+                    </form>
+                    <div class="error" id="error" hidden></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-   
+<script src="/public/js/comment.js"></script> 
 <script>
     function show(p1, p2) {
         let li01 = document.getElementById(p1)
