--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,21 @@
-
-    <main>
-        <article class="input-login">
+<div class="cntPageheader">
+    <article class="input-login">
 
 
         <h1>Login Market IT</h1>
 
-        <div class="login"> 
-        <form name ="phrase" action="/login" method="POST" id="login-form" class="login-form">
-            <input type="text"  name="username" placeholder="Username" id="name" class="name" autofocus="true" required="true"/>
-            <input type="text"  name="password" placeholder="Password" id="password" class="password" required="true" />
-            <button class="button" type="submit">Log In</button>
-        </form>
-        <a href="#" class="login_forgot">forgot password?</a>
+        <div class="login">
+            <form name="phrase" action="/login" method="POST" id="login-form" class="login-form">
+                <input type="text" name="username" placeholder="Username" id="name" class="name" autofocus="true"
+                    required="true" />
+                <input type="text" name="password" placeholder="Password" id="password" class="password" required="true" />
+                <button class="button" type="submit">Log In</button>
+            </form>
+            <a href="#" class="login_forgot">forgot password?</a>
         </div>
         <div class="shadow"></div>
-        </article>
-        <div class="error" id="error">{{error}}</div>
-        <script type="text/javascript" src="../public/js/client_side.js"></script>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    </main>
+    </article>
+    <div class="error" id="error">{{error}}</div>
+    <script type="text/javascript" src="../public/js/client_side.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</div>
