--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,55 +1,47 @@
 <!-- bloc-1 -->
-<div class="bloc bloc-fill-screen bgc-black bg-walkway d-bloc full-width-bloc" id="bloc-1">
-	<div class="container fill-bloc-top-edge">
-		<nav class="navbar row">
-			<div class="navbar-header">
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle menu-icon-rounded-bars" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
-			</div>
-			<div class="collapse navbar-collapse navbar-1 nav-special fullscreen-nav">
-			</div>
-		</nav>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1 class="text-center mountain-hero-text animated fadeInUp">
-					Products available according to your need<br>
-				</h1>
-				<h3 class="text-center mg-lg mountain-hero-text-sub animated fadeInUp animDelay06, .animDelay04-hvr">
-					<br>
-				</h3>
-				<div class="text-center">
-					<a href="login" class="btn-wire btn btn-xl animated fadeIn animDelay1">Login<br></a>
-				</div>
-				<p>
-					
-				</p>
-				<div class="text-center">
-					<a href="signup" class="btn-wire btn btn-xl animated fadeIn animDelay1">Sign Up<br></a>
-				</div>
-			</div>
+<div class="cntPageheader">
+	<div class="bloc bloc-fill-screen bgc-black bg-walkway d-bloc full-width-bloc" id="bloc-1">
+		<div class="container fill-bloc-top-edge">
 		</div>
-	</div>
-	<div class="container fill-bloc-bottom-edge">
-		<div class="row">
-			<div class="col-sm-12">
-				<a id="scroll-hero" class="blocs-hero-btn-dwn" href="#"><span class="fa fa-chevron-down"></span></a>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-1 END -->
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<h1 class="text-center mountain-hero-text animated fadeInUp">
+						Products available according to your need<br>
+					</h1>
+					<h3 class="text-center mg-lg mountain-hero-text-sub animated fadeInUp animDelay06, .animDelay04-hvr">
+						<br>
+					</h3>
+					<div class="text-center">
+						<a href="login" class="btn-wire btn btn-xl animated fadeIn animDelay1">Login<br></a>
+					</div>
+					<p>
 
-<!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-<!-- ScrollToTop Button END-->
+					</p>
+					<div class="text-center">
+						<a href="signup" class="btn-wire btn btn-xl animated fadeIn animDelay1">Sign Up<br></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container fill-bloc-bottom-edge">
+			<div class="row">
+				<div class="col-sm-12">
+					<a id="scroll-hero" class="blocs-hero-btn-dwn" href="#"><span class="fa fa-chevron-down"></span></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- bloc-1 END -->
+
+	<!-- ScrollToTop Button -->
+	<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+	<!-- ScrollToTop Button END-->
 </div>
 <!-- Main container END -->
 
 <!-- Preloader -->
 <div id="page-loading-blocs-notifaction"></div>
-<!-- Preloader END -->
+</div>
 
-          
+<!-- Preloader END -->
