--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,73 +1,65 @@
-<div class="container">
-      <hr>
+<div class="cntPageheader">
       <h2>Sign Up For Market IT</h2>
-      <hr>
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8  col-12 jumbotron">
+        <div class="row justify-content-center ">
+          <div class="col-lg-8  col-12 jumbotron cntsignupback">
             <form  name ="signup" action="/signup" method="POST" id="signup-form" class="signup-form">
-              <div class="form-group" >
-                <label for="name">User Name:</label>
-                <input type="text" class="form-control" id="signup-name" name="username" placeholder="Name" aria-describedby="nameHelp">
-                <span id="nameHelp" class="form-text text-muted" style="display: none;">Please enter a valid user name.</span> 
-              </div>
-                
               <div class="form-group">
-                <label for="firstname">First Name</label>
+                <label for="firstname" class="clsformLabel">First Name</label>
                 <input type="text" class="form-control" id="signup-first" name="signup-first" placeholder="First Name" aria-describedby="firstHelp">
                 <span id="firstHelp" class="form-text text-muted" style="display: none;">Please enter a valid first name.</span>
               </div>
                 
               <div class="form-group">
-                <label for="lastname">Last Name:</label>
+                <label for="lastname" class="clsformLabel">Last Name:</label>
                 <input type="text" class="form-control" id="signup-last" name="signup-last" placeholder="Last Name" aria-describedby="lastHelp">
                 <span id="lastHelp" class="form-text text-muted" style="display: none;">Please enter a valid last name.</span>
               </div>
               
               <div class="form-group">
-                <label for="email">Email:</label>
+                <label for="email" class="clsformLabel">Email:</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" aria-describedby="emailHelp">
                 <span id="emailHelp" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span>
               </div>
                 
               <div class="form-group">
-                <label for="telephone">Telephone:</label>
+                <label for="telephone" class="clsformLabel">Telephone:</label>
                 <input type="text" class="form-control" id="signup-phone" name="signup-phone" placeholder="Telephone Number" aria-describedby="phoneHelp">
                 <span id="phoneHelp" class="form-text text-muted" style="display: none;">Please enter a valid telephone number.</span>
               </div>
               
               <div class="form-group">
-                <label for="city">City:</label>
+                <label for="city" class="clsformLabel">City:</label>
                 <input type="text" class="form-control" id="signup-city" name="signup-city" placeholder="City" aria-describedby="cityHelp">
                 <span id="cityHelp" class="form-text text-muted" style="display: none;">Please enter a valid city.</span>
               </div>
                 
-              <div class="form-group">
-                <label for="addressline1">Address Line 1:</label>
+              <div class="form-group" >
+                <label for="addressline1" class="clsformLabel">Address Line 1:</label>
                 <input type="text" class="form-control" id="signup-address1" name="signup-address1" placeholder="Address Line 1" aria-describedby="addressline1Help">
                 <span id="addressline1Help" class="form-text text-muted" style="display: none;">Please enter a valid address line.</span>
               </div>
               
-              <div class="form-group">
-                <label for="addressline2">Address Line 2:</label>
+              <div class="form-group" >
+                <label for="addressline2" class="clsformLabel">Address Line 2:</label>
                 <input type="text" class="form-control" id="signup-address2" name="signup-address2" placeholder="Address Line 2" aria-describedby="addressline2Help">
                 <span id="addressline2Help" class="form-text text-muted" style="display: none;">Please enter a valid address line.</span>
               </div>
                 
               <div class="form-group">
-                <label for="password">Password:</label>
+                <label for="password" class="clsformLabel">Password:</label>
                 <input type="text" class="form-control" id="signup-password" name="signup-password" placeholder="Password" aria-describedby="passwordHelp">
                 <span id="passwordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
               </div>
                 
               <div class="form-group">
-                <label for="repassword">Repeat Password:</label>
+                <label for="repassword" class="clsformLabel">Repeat Password:</label>
                 <input type="text" class="form-control" id="signup-repassword" name="signup-repassword" placeholder="Repeat Password" aria-describedby="repasswordHelp">
                 <span id="repasswordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
               </div>
             
               <div class="text-center">
-                <button type="submit" class="btn btn-primary" id ="signup-button">Submit</button>
+                <button type="submit" class="gradient-button gradient-button-1" id ="signup-button">Submit</button>
               </div>
             </form>
           </div>
