working add user

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,13 +6,13 @@
             <form  name ="signup" action="/signup" method="POST" id="signup-form" class="signup-form">
               <div class="form-group">
                 <label for="firstname" class="clsformLabel">First Name</label>
-                <input type="text" class="form-control" id="signup-first" name="signup-first" placeholder="First Name" aria-describedby="firstHelp">
+                <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" aria-describedby="firstHelp">
                 <span id="firstHelp" class="form-text text-muted" style="display: none;">Please enter a valid first name.</span>
               </div>
                 
               <div class="form-group">
                 <label for="lastname" class="clsformLabel">Last Name:</label>
-                <input type="text" class="form-control" id="signup-last" name="signup-last" placeholder="Last Name" aria-describedby="lastHelp">
+                <input type="text" class="form-control" id="last" name="last" placeholder="Last Name" aria-describedby="lastHelp">
                 <span id="lastHelp" class="form-text text-muted" style="display: none;">Please enter a valid last name.</span>
               </div>
               
@@ -24,37 +24,37 @@
                 
               <div class="form-group">
                 <label for="telephone" class="clsformLabel">Telephone:</label>
-                <input type="text" class="form-control" id="signup-phone" name="signup-phone" placeholder="Telephone Number" aria-describedby="phoneHelp">
+                <input type="text" class="form-control" id="phone" name="phone" placeholder="Telephone Number" aria-describedby="phoneHelp">
                 <span id="phoneHelp" class="form-text text-muted" style="display: none;">Please enter a valid telephone number.</span>
               </div>
               
               <div class="form-group">
                 <label for="city" class="clsformLabel">City:</label>
-                <input type="text" class="form-control" id="signup-city" name="signup-city" placeholder="City" aria-describedby="cityHelp">
+                <input type="text" class="form-control" id="city" name="city" placeholder="City" aria-describedby="cityHelp">
                 <span id="cityHelp" class="form-text text-muted" style="display: none;">Please enter a valid city.</span>
               </div>
                 
               <div class="form-group" >
                 <label for="addressline1" class="clsformLabel">Address Line 1:</label>
-                <input type="text" class="form-control" id="signup-address1" name="signup-address1" placeholder="Address Line 1" aria-describedby="addressline1Help">
+                <input type="text" class="form-control" id="address1" name="address1" placeholder="Address Line 1" aria-describedby="addressline1Help">
                 <span id="addressline1Help" class="form-text text-muted" style="display: none;">Please enter a valid address line.</span>
               </div>
               
               <div class="form-group" >
                 <label for="addressline2" class="clsformLabel">Address Line 2:</label>
-                <input type="text" class="form-control" id="signup-address2" name="signup-address2" placeholder="Address Line 2" aria-describedby="addressline2Help">
+                <input type="text" class="form-control" id="address2" name="address2" placeholder="Address Line 2" aria-describedby="addressline2Help">
                 <span id="addressline2Help" class="form-text text-muted" style="display: none;">Please enter a valid address line.</span>
               </div>
                 
               <div class="form-group">
                 <label for="password" class="clsformLabel">Password:</label>
-                <input type="text" class="form-control" id="signup-password" name="signup-password" placeholder="Password" aria-describedby="passwordHelp">
+                <input type="text" class="form-control" id="password" name="password" placeholder="Password" aria-describedby="passwordHelp">
                 <span id="passwordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
               </div>
                 
               <div class="form-group">
                 <label for="repassword" class="clsformLabel">Repeat Password:</label>
-                <input type="text" class="form-control" id="signup-repassword" name="signup-repassword" placeholder="Repeat Password" aria-describedby="repasswordHelp">
+                <input type="text" class="form-control" id="password2" name="password2" placeholder="Repeat Password" aria-describedby="repasswordHelp">
                 <span id="repasswordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
               </div>
             
