--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1424,14 +1424,15 @@ textarea {
 }
 
 a {
-  color: #337ab7;
+  color: gray;
   text-decoration: none;
+  font-size: 25px;
 }
 
 a:hover,
 a:focus {
   color: #23527c;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a:focus {
@@ -1445,7 +1446,7 @@ figure {
 }
 
 img {
-  vertical-align: middle;
+
 }
 
 .img-responsive,
@@ -5263,14 +5264,14 @@ select[multiple].input-group-sm>.input-group-btn>.btn {
 }
 
 .navbar {
-  position: fixed;
+  /* position: fixed; */
   min-height: 50px;
   width: 100%;
   margin-bottom: 20px;
-  background: #e4e4e4;
+  background: white;
   /* border: 1px solid transparent; */
-  border-bottom: 1px solid #e4e4e4;
-  box-shadow: 0px 0px 16px;
+  /* border-bottom: 1px solid #e4e4e4; */
+  /* box-shadow: 0px 0px 16px; */
 }
 
 @media (min-width: 768px) {
