--- a/views/postproduct.handlebars
+++ b/views/postproduct.handlebars
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-8  col-12 jumbotron">
-      <form  name ="productup" action="/productup" method="POST" id="productup-form" class="productup-form">
+      <form  name ="productup" action="/products/productup" method="POST" id="productup-form" class="productup-form">
         <div class="form-group" >
           <label for="productname"><h2>Product Name:</h2></label>
           <input type="text" class="form-control" id="productup-name" name="productname" placeholder="Name" aria-describedby="pnameHelp">
