--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,9 +9,10 @@
                 <input type="text" name="username" placeholder="Username" id="name" class="name" autofocus="true"
                     required="true" />
                 <input type="text" name="password" placeholder="Password" id="password" class="password" required="true" />
-                <button class="button" type="submit">Log In</button>
+                <button type="submit">Log In</button>
+                <a href="#" class="login_forgot">forgot password?</a>
             </form>
-            <a href="#" class="login_forgot">forgot password?</a>
+            
         </div>
         <div class="shadow"></div>
     </article>
