--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -23,7 +23,7 @@
               </div>
                 
               <div class="form-group">
-                <label for="telephone" class="clsformLabel">Telephone:</label>
+                <label for="telephone" class="clsformLabel">Phone:</label>
                 <input type="text" class="form-control" id="phone" name="phone" placeholder="Telephone Number" aria-describedby="phoneHelp">
                 <span id="phoneHelp" class="form-text text-muted" style="display: none;">Please enter a valid telephone number.</span>
               </div>
