--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,7 @@
 <div class="cntPageheader">
-      <h2>Sign Up For Market IT</h2>
+      <br/>
+      <h2 class="signup-h2">Sign Up For Market IT</h2>
+      <br/>
       <div class="container">
         <div class="row justify-content-center ">
           <div class="col-lg-8  col-12 jumbotron cntsignupback">
