--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,3 +66,10 @@
     border-right:0.6px solid gray;
     padding-right: 12px;
 }
+
+.signup-h2{
+    font-size: 25px;
+    color: gray;
+    font-family: "Domine";
+    text-align: center;
+}
