--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -40,7 +40,7 @@
                     </p>
                     <form method="GET" action="/{{this._id}}"><button type="submit" class="btn btn-primary btn-sm">View Details</button></a>
                 </div>
-                {{#each/}}
+                {{/each}}
                 <div class="col-sm-4">
                     <div id="myCarousel" class="carousel slide">
                         <ol class="carousel-indicators">
